client/etc/k8s/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adm-client-1
  namespace: adm
  labels:
    app: adm-client-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adm-client-1
  template:
    metadata:
      labels:
        app: adm-client-1
    spec:
      containers:
        - name: adm-client-1
          image: docker.pkg.github.com/didream/adm-visualizacion-datos-i/adm-client:1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerconfigjson-github-com
