client/etc/k8s/03-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: adm-client
  namespace: adm-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /adm-1(/|$)(.*)
        backend:
          serviceName: adm-client
          servicePort: 8080
